using Job.Broker.Producers;

namespace Job.Broker.Options;

/// <summary>
/// Options for <see cref="JobProducer"/>
/// </summary>
public class ProducerOptions : BrokerOptions;
